# http_mcp

./: .envrc  .gitignore  AGENT.md  CLAUDE.md  LICENSE  README.md  fluidattacks_sast_config.yaml  fluidattacks_sca_config.yaml  fluidattacks_scanners_config.yaml  mypy.ini  pyproject.toml  ruff.toml
.claude/agents/: security-code-reviewer.md
.cursor/: mcp.json
.gemini/: settings.json
.githooks/: pre-push
.github/workflows/: create-historical-releases.yml  dev.yml  publish.yml  sast-scan.yml  sca-scan.yml
app/: main.py  prompts.py  tools.py
docs/: auth-mcp.md  webapp-mcp-auth-scenario.md
server/: __init__.py  capabilities.py  exceptions.py  http_transport.py  messages.py  models.py  prompts.py  server.py  server_interface.py  stdio_transport.py  tools.py  transport.py  transport_base.py  transport_types.py  utils.py
server/mcp_types/: messages.py  prompts.py  tools.py
src/auth_mcp/: README.md  __init__.py  exceptions.py
src/auth_mcp/authorization_server/: __init__.py  client_store.py  metadata_endpoint.py  registration_endpoint.py
src/auth_mcp/resource_server/: __init__.py  authentication_backend.py  integration.py  metadata_endpoint.py  middleware.py  token_validator.py
src/auth_mcp/types/: __init__.py  errors.py  metadata.py  oauth.py  registration.py
src/http_mcp/: _stdio_transport.py  _transport_base.py  _transport_http.py  _transport_types.py  exceptions.py  http_transport.py  prompts.py  server.py  server_interface.py  stdio_transport.py  tools.py  transport_base.py
src/http_mcp/_json_rcp_types/: errors.py  messages.py
src/http_mcp/_mcp_types/: content.py  messages.py  prompts.py  tools.py
src/http_mcp/mcp_types/: messages.py  prompts.py  tools.py
src/http_mcp/types/: __init__.py  models.py  prompts.py  tools.py  utils.py
tests/: models.py  smoke_test.py  test_base_transport.py  test_complex_server.py  test_http_transport.py  test_initialization.py  test_models.py  test_prompts.py  test_prompts_methods.py  test_server.py  test_server_handling_prompt_scopes.py  test_server_with_context.py  test_server_without_context.py  test_smoke.py  test_studio_transport.py  test_tools_methods.py  tools.py
tests/app/: context.py  main.py  prompts.py  test_app.py  test_auth_integration.py  tools.py
tests/auth_mcp/: test_exceptions.py  test_redirect_uri_security.py
tests/auth_mcp/authorization_server/: test_client_store.py  test_metadata_endpoint.py  test_registration_endpoint.py
tests/auth_mcp/resource_server/: test_authentication_backend.py  test_integration.py  test_metadata_endpoint.py  test_middleware.py  test_token_validator.py
tests/auth_mcp/types/: test_errors.py  test_metadata.py  test_oauth.py  test_registration.py
tests/fixtures/: context.py  main.py  models.py  prompts.py  tools.py
tests/http_mcp/: test_models.py  test_prompts.py  test_server.py  test_stateful_tools.py  test_tools.py  test_transport_base.py  test_transport_http.py  test_transport_stdio.py
tests/http_mcp/_json_rcp_types/: test_errors.py  test_messages.py
tests/http_mcp/_mcp_types/: test_tools.py
tests/integration/: test_app.py  test_auth_app.py
tests/json_rcp_types/: test_messages.py
