[project]
name = "http-mcp"
authors = [{ name = "Yeison Liscano", email = "yliscanoc@gmail.com" }]
maintainers = [{ name = "Yeison Liscano", email = "yliscanoc@gmail.com" }]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["mcp", "llm", "automation", "http"]
description = "This is a HTTP implementation of the MCP protocol"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
version = "0.8.1"

dependencies = ["pydantic==2.12.5", "uvicorn==0.38.0", "starlette==0.50.0"]

[dependency-groups]
dev = [
    "jsonschema==4.25.1",
    "httpx==0.28.1",
    "mdformat==1.0.0",
    "mypy==1.19.0",
    "pytest==9.0.1",
    "ruff==0.14.7",
    "pytest-cov==7.0.0",
    "pytest-asyncio==1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/http_mcp"]

[project.urls]
Homepage = "https://github.com/yeison-liscano/http_mcp"
Issues = "https://github.com/yeison-liscano/http_mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git" }
