[project]
name = "http-mcp"
authors = [{ name = "Yeison Liscano", email = "yliscanoc@gmail.com" }]
maintainers = [{ name = "Yeison Liscano", email = "yliscanoc@gmail.com" }]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["mcp", "llm", "automation", "http"]
description = "This is a HTTP implementation of the MCP protocol"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
version = "0.11.1"

dependencies = ["pydantic (>=2.12.5,<3.0.0)", "uvicorn (>=0.41.0,<0.42.0)", "starlette (>=0.52.1,<0.53.0)"]

[project.optional-dependencies]
auth = []

[dependency-groups]
dev = [
    "jsonschema (>=4.26.0,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "mdformat (>=1.0.0,<2.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.2,<0.16.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
]

[tool.hatch.build.targets.wheel]
packages = ["src/http_mcp", "src/auth_mcp"]

[project.urls]
Homepage = "https://github.com/yeison-liscano/http_mcp"
Issues = "https://github.com/yeison-liscano/http_mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git" }
